--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,16 @@
         <activity android:name=".DashbordAct" />
         <activity android:name=".LaporanUangAct" />
         <activity android:name=".AbsensiAct" />
-        <activity android:name=".Login2Act"></activity>
+        <activity android:name=".Login2Act" />
+        <activity android:name=".OwnerDashbordAct" />
+        <activity android:name=".EditOwnerAct" />
+        <activity android:name=".EditTokoAct" />
+        <activity android:name=".DataKaryawanAct" />
+        <activity android:name=".ProfileKaryawanAct" />
+        <activity android:name=".EditKaryawanAct" />
+        <activity android:name=".AddKaryawanAct" />
+        <activity android:name=".LaporanOwnerAct" />
+        <activity android:name=".GajiAct"></activity>
     </application>
 
 </manifest>
