--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         <activity android:name=".EditKaryawanAct" />
         <activity android:name=".AddKaryawanAct" />
         <activity android:name=".LaporanOwnerAct" />
-        <activity android:name=".GajiAct"></activity>
+        <activity android:name=".GajiAct" />
+        <activity android:name=".ListAbsensiAct"></activity>
     </application>
 
 </manifest>
